--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
       "react-app",
       "react-app/jest"
     ]
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
